# rag-chunking-comparison

./: .gitignore  .vercelignore  CLAUDE.md  PYTHON_BACKEND.md  RAGAS_IMPROVEMENTS.md  README.md  SEMANTIC_CHUNKING_ANALYSIS.md  TEST_QUESTION_IMPROVEMENTS.md  VERCEL_DEBUG.txt  aa.md  dev-server.py  eslint.config.mjs  next.config.js  package-lock.json  package.json  pyproject.toml  requirements-full.txt  requirements-lightweight.txt  requirements-minimal.txt  run-dev-server.py  vercel.json
api/: advanced_test_generator.py  analysis.py  chunking.py  evaluation.py  evaluation_old.py  extract_pdf.py  ml_imports.py  ragas_metrics.py  test-api-key.py  test_generator.py
app/: globals.css  layout.tsx  page.tsx
app/api/analysis/: route.ts
app/api/chunking/: route.ts
app/api/evaluation/: route.ts
app/api/extract-pdf/: route.ts
app/api/models/: route.ts
app/api/test-api-key/: route.ts
components/: api-key-input.tsx  chunk-visualizer.tsx  comparison-dashboard.tsx  configuration-panel.tsx  custom-test-questions.tsx  document-upload.tsx  loading-spinner.tsx  metrics-chart.tsx  statistical-summary.tsx  test-generation-info.tsx  test-validation.tsx
lib/: pdf-utils.ts  utils.ts
lib/analysis/: statistics.ts
lib/cache/: browser-cache.ts
lib/chunking/: naive.ts  semantic.ts
lib/evaluation/: embedding-retrieval.ts  ragas.ts  tfidf-retrieval.ts
lib/hooks/: use-cached-chunking.ts  use-local-storage.ts
scripts/: vercel-build.sh
