[project]
name = "rag-chunking-comparison"
version = "1.0.0"
description = "RAG Chunking Comparison - Evaluating text chunking strategies using RAGAS metrics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers>=2.7.0",
    "nltk>=3.9.1",
    "tiktoken>=0.8.0",
    "numpy>=1.26.4",
    "scipy>=1.14.1",
    "scikit-learn>=1.5.2",
    "pandas>=2.2.3",
    "openai>=1.54.4",
    "datasets>=3.1.0",
    "ragas>=0.2.15",
    "langchain>=0.3.7",
    "langchain-openai>=0.2.8",
    "langchain-community>=0.3.7",
    "transformers>=4.46.3",
    "torch>=2.5.1",
    "faiss-cpu>=1.9.0",
    "chromadb>=0.5.23",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.36",
    "pypdf2>=3.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "ipython>=8.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.uv]
managed = true
dev-dependencies = [
    "flask[async]>=3.1.1",
    "flask-cors>=6.0.1",
]

[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # Allow raising without from in except
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
